[gd_scene load_steps=3 format=3 uid="uid://dykn0prx7hhlk"]

[ext_resource type="Script" path="res://settings_2.gd" id="1_0qejn"]

[sub_resource type="Theme" id="Theme_6gif7"]

[node name="Settings2" type="PopupPanel"]
process_mode = 3
size = Vector2i(208, 100)
visible = true
always_on_top = true
theme = SubResource("Theme_6gif7")
script = ExtResource("1_0qejn")

[node name="Control" type="Control" parent="."]
clip_contents = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 3
anchors_preset = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 204.0
offset_bottom = 96.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
custom_minimum_size = Vector2(200, 0)
layout_direction = 1
layout_mode = 0
offset_right = 112.0
offset_bottom = 92.0

[node name="Label" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "発射間隔　１秒"

[node name="HSlider" type="HSlider" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_vertical = 3
min_value = 1.0
max_value = 10.0
value = 1.0

[node name="Button" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "閉じる"

[connection signal="popup_hide" from="." to="." method="_on_popup_hide"]
[connection signal="drag_ended" from="Control/VBoxContainer/HSlider" to="." method="_on_h_slider_drag_ended"]
[connection signal="pressed" from="Control/VBoxContainer/Button" to="." method="_on_button_pressed"]
